MODON MRE BPDEV/force-app/main/default/objects/Case/fields/New_Case_Category__c.field-meta.xml
<CustomField>
    <fullName>New_Case_Category__c</fullName>
    <label>New Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>CM Operation Team</fullName>
            </value>
            <value>
                <fullName>Contact Centre</fullName>
            </value>
            <value>
                <fullName>Contact Details Update</fullName>
            </value>
            <value>
                <fullName>Default &amp; Collection</fullName>
            </value>
            <value>
                <fullName>Department Action</fullName>
            </value>
            <value>
                <fullName>General Enquiry</fullName>
            </value>
            <value>
                <fullName>KYC Update</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Post Sales</fullName>
            </value>
            <value>
                <fullName>Real Estate Services</fullName>
            </value>
            <value>
                <fullName>Registration Team</fullName>
            </value>
            <value>
                <fullName>Service Request</fullName>
            </value>
            <value>
                <fullName>SPA</fullName>
            </value>
            <value>
                <fullName>Contact Center / Front Liners</fullName>
                <isActive>false</isActive>
                <label>Contact Center / Front Liners</label>
            </value>
            <value>
                <fullName>Finance</fullName>
                <isActive>false</isActive>
                <label>Finance</label>
            </value>
            <value>
                <fullName>Finance / Front Liners</fullName>
                <isActive>false</isActive>
                <label>Finance / Front Liners</label>
            </value>
            <value>
                <fullName>Handover</fullName>
                <isActive>false</isActive>
                <label>Handover</label>
            </value>
            <value>
                <fullName>National Housing Enquiry</fullName>
                <isActive>false</isActive>
                <label>National Housing Enquiry</label>
            </value>
            <value>
                <fullName>Negative Feedback</fullName>
                <isActive>false</isActive>
                <label>Negative Feedback</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>