MODON MRE BPDEV/force-app/main/default/objects/Case/fields/New_Case_SubCategory__c.field-meta.xml
<CustomField>
    <fullName>New_Case_SubCategory__c</fullName>
    <label>New Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>New_Case_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Addition/Deletion of Joint Owner</fullName>
            </value>
            <value>
                <fullName>ADM/ADGM Registration</fullName>
            </value>
            <value>
                <fullName>ADM Fee Refund</fullName>
            </value>
            <value>
                <fullName>ADM Fees</fullName>
            </value>
            <value>
                <fullName>ADM Fee Waiver</fullName>
            </value>
            <value>
                <fullName>ADM Waiver</fullName>
            </value>
            <value>
                <fullName>Appointment Request</fullName>
            </value>
            <value>
                <fullName>Bank Details</fullName>
            </value>
            <value>
                <fullName>Bounced Cheque</fullName>
            </value>
            <value>
                <fullName>Broker Inquiries</fullName>
            </value>
            <value>
                <fullName>Broker Portal</fullName>
            </value>
            <value>
                <fullName>Broker Registration</fullName>
            </value>
            <value>
                <fullName>Cancel &amp; Refund</fullName>
            </value>
            <value>
                <fullName>Cancellation with Refund</fullName>
            </value>
            <value>
                <fullName>Cheque Replacement</fullName>
            </value>
            <value>
                <fullName>Client Approvals</fullName>
            </value>
            <value>
                <fullName>Commission Enquiries</fullName>
            </value>
            <value>
                <fullName>Consolidation</fullName>
            </value>
            <value>
                <fullName>Construction Update</fullName>
            </value>
            <value>
                <fullName>Contact Details Update</fullName>
            </value>
            <value>
                <fullName>Customer Care</fullName>
            </value>
            <value>
                <fullName>Customer Data Privacy</fullName>
            </value>
            <value>
                <fullName>Default Notice And Termination</fullName>
            </value>
            <value>
                <fullName>Discount</fullName>
            </value>
            <value>
                <fullName>Docusign Follow Up</fullName>
            </value>
            <value>
                <fullName>Equity Transfer</fullName>
            </value>
            <value>
                <fullName>Expired Cheque Collection</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>General Enquiry</fullName>
            </value>
            <value>
                <fullName>Golden visa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>