MODON MRE BPDEV/force-app/main/default/objects/Case/fields/New_Owner__c.field-meta.xml
<CustomField>
    <fullName>New_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NewOwner</relationshipName>
    <type>Lookup</type>
</CustomField>