MODON MRE BPDEV/force-app/main/default/objects/Case/fields/New_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>New_Owner_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>New Owner Email</label>
    <type>Email</type>
</CustomField>