MODON MRE BPDEV/force-app/main/default/objects/Case/fields/New_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>New_Owner_Name__c</fullName>
    <formula>IF(
LEFT( New_Owner__c, 3 ) = &quot;005&quot;,
New_Owner__r.FirstName + &apos; &apos; + New_Owner__r.LastName,
Owner:Queue.QueueName
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Owner</label>
    <type>Text</type>
</CustomField>