MODON MRE BPDEV/force-app/main/default/objects/Case/fields/NPS__c.field-meta.xml
<CustomField>
    <fullName>NPS__c</fullName>
    <label>NPS</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>