MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <label>Organization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MRE Broker Management</fullName>
            </value>
            <value>
                <fullName>MRE Commercial</fullName>
            </value>
            <value>
                <fullName>MRE HR</fullName>
            </value>
            <value>
                <fullName>MRE Legal</fullName>
            </value>
            <value>
                <fullName>MRE Marketing</fullName>
            </value>
            <value>
                <fullName>MRE Procurement</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
                <isActive>false</isActive>
                <label>Corporate</label>
            </value>
            <value>
                <fullName>Development</fullName>
                <isActive>false</isActive>
                <label>Development</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>