MODON MRE BPDEV/force-app/main/default/objects/Case/fields/ortoo_qra__Assigned_From_Group__c.field-meta.xml
<CustomField>
    <fullName>ortoo_qra__Assigned_From_Group__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Assigned From Group</label>
    <length>18</length>
    <type>Text</type>
</CustomField>