MODON MRE BPDEV/force-app/main/default/objects/Case/fields/ortoo_qra__Assignment_Seq__c.field-meta.xml
<CustomField>
    <fullName>ortoo_qra__Assignment_Seq__c</fullName>
    <description>Assignment sequence number</description>
    <label>Assignment Seq</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>