MODON MRE BPDEV/force-app/main/default/objects/Case/fields/ortoo_qra__Q_assign_Custom_Seq__c.field-meta.xml
<CustomField>
    <fullName>ortoo_qra__Q_assign_Custom_Seq__c</fullName>
    <description>Q-assign custom assign sequence</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Q-assign Custom Seq</label>
    <length>20</length>
    <type>Text</type>
</CustomField>