MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <formula>IF( 
    LEFT( OwnerId, 3 ) = &quot;005&quot;, 
    Owner:User.FirstName + &apos; &apos; +  Owner:User.LastName, 
    Owner:Queue.QueueName 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>