MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Owner_Override_Comments__c.field-meta.xml
<CustomField>
    <fullName>Owner_Override_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Owner Override Comments</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>