MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Owner_Queue__c.field-meta.xml
<CustomField>
    <fullName>Owner_Queue__c</fullName>
    <label>Owner Queue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact_Centre</fullName>
                <label>Contact Centre</label>
            </value>
            <value>
                <fullName>Default_Collection</fullName>
                <label>Default &amp; Collection</label>
            </value>
            <value>
                <fullName>Email_To_Case</fullName>
                <label>Email To Case</label>
            </value>
            <value>
                <fullName>Property_Transfer_Services</fullName>
                <label>Property Transfer Services</label>
            </value>
            <value>
                <fullName>Real_Estate_Services</fullName>
                <label>Real Estate Services</label>
            </value>
            <value>
                <fullName>Web_To_Case</fullName>
                <label>Web To Case</label>
            </value>
            <value>
                <fullName>MIRE Contact Centre</fullName>
            </value>
            <value>
                <fullName>MIRE_Contact_Centre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>