MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Previous_CaseCategory__c.field-meta.xml
<CustomField>
    <fullName>Previous_CaseCategory__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Previous Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>