MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Previous_CaseSubCategory__c.field-meta.xml
<CustomField>
    <fullName>Previous_CaseSubCategory__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Previous Sub Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>