MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Previous_Department__c.field-meta.xml
<CustomField>
    <fullName>Previous_Department__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Previous Department</label>
    <type>TextArea</type>
</CustomField>