MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Previous_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Previous_Owner_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Previous Owner Email</label>
    <type>Email</type>
</CustomField>