MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Previous_Owner_Queue__c.field-meta.xml
<CustomField>
    <fullName>Previous_Owner_Queue__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Previous Owner Queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>