MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Previous_Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Previous_Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Sales Order</label>
    <referenceTo>SalesOrder__c</referenceTo>
    <relationshipLabel>Cases (Previous Sales Order)</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>