MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Previous_Sub_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Previous_Sub_Vertical__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Previous Sub Vertical</label>
    <length>255</length>
    <type>Text</type>
</CustomField>