MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Primary_Assignee__c.field-meta.xml
<CustomField>
    <fullName>Primary_Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases_Assigned</relationshipName>
    <type>Lookup</type>
</CustomField>