MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Primary_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Owner_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Owner Name</label>
    <type>TextArea</type>
</CustomField>