MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Queue__c.field-meta.xml
<CustomField>
    <fullName>Queue__c</fullName>
    <label>TL Queue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact_Centre_TL</fullName>
                <label>Contact Center TL</label>
            </value>
            <value>
                <fullName>Default_Collection_TL</fullName>
                <label>Default &amp; Collection TL</label>
            </value>
            <value>
                <fullName>Property_Transfer_Services_TL</fullName>
                <label>Property Transfer Services TL</label>
            </value>
            <value>
                <fullName>Real_Estate_Services_TL</fullName>
                <label>Real Estate Services TL</label>
            </value>
            <value>
                <fullName>Web_To_Case_TL</fullName>
                <label>Web To Case TL</label>
            </value>
            <value>
                <fullName>Email_To_Case_TL</fullName>
                <label>Email To Case TL</label>
            </value>
            <value>
                <fullName>MIRE Contact Centre TL</fullName>
            </value>
            <value>
                <fullName>MIRE_Contact_Centre_TL</fullName>
            </value>
            <value>
                <fullName>Property_Transfer_Services</fullName>
                <isActive>false</isActive>
                <label>Property_Transfer_Services</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>