MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Queue_Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>Queue_Assigned_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Queue Assigned Date</label>
    <type>DateTime</type>
</CustomField>