MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Queue_Owner__c.field-meta.xml
<CustomField>
    <fullName>Queue_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Queue Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>QueueOwner</relationshipName>
    <type>Lookup</type>
</CustomField>