MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Queue_Owner_Target_SLA__c.field-meta.xml
<CustomField>
    <fullName>Queue_Owner_Target_SLA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Queue Owner Target SLA</label>
    <type>DateTime</type>
</CustomField>