MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Reciept__c.field-meta.xml
<CustomField>
    <fullName>Reciept__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reciept</label>
    <referenceTo>Receipt__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>