MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Refund_Closure_Status__c.field-meta.xml
<CustomField>
    <fullName>Refund_Closure_Status__c</fullName>
    <label>Refund Closure Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Checks Return to the Customer</fullName>
            </value>
            <value>
                <fullName>Refund Not Required</fullName>
            </value>
            <value>
                <fullName>Refund Completed</fullName>
            </value>
            <value>
                <fullName>Modon Credit Note</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>