MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Requestor_Email__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Case creation and closure emails are sent to this email address.</inlineHelpText>
    <label>Customer Email</label>
    <type>Email</type>
</CustomField>