MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Resolution_Time__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Time__c</fullName>
    <description>Calculates the number of total hours from when a case was created to when it was closed. If the case is open, it calculates the time from Created Date to now.</description>
    <formula>IF(
ISBLANK(ClosedDate),
(NOW() - CreatedDate) * 24,
(ClosedDate - CreatedDate) * 24
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resolution Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>