MODON MRE BPDEV/force-app/main/default/objects/Case/fields/RunningTestClass__c.field-meta.xml
<CustomField>
    <fullName>RunningTestClass__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RunningTestClass</label>
    <type>Checkbox</type>
</CustomField>