MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Sales_Order_Installment__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Installment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order Installment</label>
    <referenceTo>SalesOrderInstallments__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>