MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Secondary_Details_Provided__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Details_Provided__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Secondary Details Provided</label>
    <type>Checkbox</type>
</CustomField>