MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Send_Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Customer_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Customer Email</label>
    <type>Checkbox</type>
</CustomField>