MODON MRE BPDEV/force-app/main/default/objects/Case/fields/SendEmail_CaseClosed__c.field-meta.xml
<CustomField>
    <fullName>SendEmail_CaseClosed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SendEmail CaseClosed</label>
    <type>Checkbox</type>
</CustomField>