MODON MRE BPDEV/force-app/main/default/objects/Case/fields/SendEmail_CaseClosed_FCR__c.field-meta.xml
<CustomField>
    <fullName>SendEmail_CaseClosed_FCR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SendEmail CaseClosed FCR</label>
    <type>Checkbox</type>
</CustomField>