MODON MRE BPDEV/force-app/main/default/objects/Case/fields/SendEmail_CaseCreated__c.field-meta.xml
<CustomField>
    <fullName>SendEmail_CaseCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SendEmail CaseCreated</label>
    <type>Checkbox</type>
</CustomField>