MODON MRE BPDEV/force-app/main/default/objects/Case/fields/SendEmail_DeptartmentTransfer__c.field-meta.xml
<CustomField>
    <fullName>SendEmail_DeptartmentTransfer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SendEmail DeptartmentTransfer</label>
    <type>Checkbox</type>
</CustomField>