MODON MRE BPDEV/force-app/main/default/objects/Case/fields/SendEmail_Docusign_Followup__c.field-meta.xml
<CustomField>
    <fullName>SendEmail_Docusign_Followup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SendEmail Docusign Followup</label>
    <type>Checkbox</type>
</CustomField>