MODON MRE BPDEV/force-app/main/default/objects/Case/fields/SendEmail_DuplicateCase__c.field-meta.xml
<CustomField>
    <fullName>SendEmail_DuplicateCase__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SendEmail DuplicateCase</label>
    <type>Checkbox</type>
</CustomField>