MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <formula>IF(
    OR(
        ISPICKVAL(Customer_Type__c, &quot;Visitor&quot;),
        ISBLANK(AccountId)
    ),
    &quot;&quot;,
    IF(
        Account.Customer_Segemnt_Group__c = &quot;Elite&quot;,
        &quot;🔥 &quot; &amp; Account.Customer_Segemnt_Group__c,
        Account.Customer_Segemnt_Group__c
    )
)</formula>
    <label>Service Type</label>
    <type>Text</type>
</CustomField>