MODON MRE BPDEV/force-app/main/default/objects/Case/fields/SR_Number__c.field-meta.xml
<CustomField>
    <fullName>SR_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SR Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>