MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <label>Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>UnResolved</fullName>
            </value>
            <value>
                <fullName>Closed With Resolution</fullName>
                <isActive>false</isActive>
                <label>Closed With Resolution</label>
            </value>
            <value>
                <fullName>Closed Without Resolution</fullName>
                <isActive>false</isActive>
                <label>Closed Without Resolution</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>