MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Sub_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Sub_Vertical__c</fullName>
    <label>Sub Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADM Services</fullName>
            </value>
            <value>
                <fullName>CM Finance</fullName>
            </value>
            <value>
                <fullName>Complaints &amp; Satisfaction</fullName>
            </value>
            <value>
                <fullName>Contact Centre</fullName>
            </value>
            <value>
                <fullName>Default &amp; Collection</fullName>
            </value>
            <value>
                <fullName>Development Control</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Post Sales</fullName>
            </value>
            <value>
                <fullName>Property Handover</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>