MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Survey_Link_Sent__c.field-meta.xml
<CustomField>
    <fullName>Survey_Link_Sent__c</fullName>
    <formula>NOT(ISBLANK( SurveyLink__c ))</formula>
    <label>Survey Link Sent</label>
    <type>Checkbox</type>
</CustomField>