MODON MRE BPDEV/force-app/main/default/objects/Case/fields/SurveyLink__c.field-meta.xml
<CustomField>
    <fullName>SurveyLink__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SurveyLink</label>
    <type>TextArea</type>
</CustomField>