MODON MRE BPDEV/force-app/main/default/objects/Case/fields/System_Generated_Case__c.field-meta.xml
<CustomField>
    <fullName>System_Generated_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>System Generated Case</label>
    <type>Checkbox</type>
</CustomField>