MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Third_Escalation_Sent__c.field-meta.xml
<CustomField>
    <fullName>Third_Escalation_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Third Escalation Sent</label>
    <type>Checkbox</type>
</CustomField>