MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Time_Limit__c.field-meta.xml
<CustomField>
    <fullName>Time_Limit__c</fullName>
    <label>Time_Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>