MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Transfer_Comments__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transfer Comments</label>
    <type>TextArea</type>
</CustomField>