MODON MRE BPDEV/force-app/main/default/objects/Case/fields/TransferComments__c.field-meta.xml
<CustomField>
    <fullName>TransferComments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TransferComments</label>
    <type>TextArea</type>
</CustomField>