MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Turn_Around_Time__c.field-meta.xml
<CustomField>
    <fullName>Turn_Around_Time__c</fullName>
    <formula>IF(
IsClosed,
ROUND((ClosedDate - CreatedDate) * 24, 1),null
)</formula>
    <label>Turn Around Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>