MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Unit_Phase_Name__c.field-meta.xml
<CustomField>
    <fullName>Unit_Phase_Name__c</fullName>
    <formula>Unit__r.Phase__r.Name</formula>
    <label>Unit Phase Name</label>
    <type>Text</type>
</CustomField>