MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Unit_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Unit_Project_Name__c</fullName>
    <formula>Unit__r.Project_Name__c</formula>
    <label>Unit Project Name</label>
    <type>Text</type>
</CustomField>