MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Unit_Status__c.field-meta.xml
<CustomField>
    <fullName>Unit_Status__c</fullName>
    <formula>TEXT(Unit__r.Status__c)</formula>
    <label>Unit Status</label>
    <type>Text</type>
</CustomField>